Increased the size of controls labels and text to be more readable on phone.  Fixed red error message color after successful registration and hid the form.  Increased the width of sign in controls to not chop off long emails.

--- a/client/src/app/profile/profile-edit/profile-edit.component.css
+++ b/client/src/app/profile/profile-edit/profile-edit.component.css
@@ -1,3 +1,11 @@
 .profile-button-bar {
   padding-top: 20px;
 }
+
+.gender-radio-sm {
+  padding: 15px 15px 0 15px;
+}
+
+.gender-radio {
+  padding: 30px 0 0 20px;
+}
