--- a/client/src/app/user/register/register.component.scss
+++ b/client/src/app/user/register/register.component.scss
@@ -17,3 +17,8 @@ mat-form-field {
   max-width: $field-width;
   color: $warn-color;
 }
+
+.registration-ok-message {
+  max-width: $field-width;
+  color: black;
+}
