--- a/client/src/app/user/sign-in/sign-in.component.css
+++ b/client/src/app/user/sign-in/sign-in.component.css
@@ -4,3 +4,8 @@
   min-height: 0;
   line-height: normal;
 }
+
+.sign-in-field {
+  max-width: 300px;
+  min-width: 300px;
+}
