--- a/client/src/my-theme.scss
+++ b/client/src/my-theme.scss
@@ -6,10 +6,23 @@ $config: mat-typography-config();
 // Define a custom typography config that overrides the font-family as well as the
 $custom-typography: mat-typography-config(
   $font-family: 'Roboto, monospace',
+    // overrides
   $caption:       mat-typography-level(20px, 28px, 400),
   $button:        mat-typography-level(18px, 18px, 500),
+  $body-1:        mat-typography-level(18px, 20px, 400),
+
+  // standard
+  $display-4:     mat-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
+  $display-3:     mat-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
+  $display-2:     mat-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
+  $display-1:     mat-typography-level(34px, 40px, 400),
+  $headline:      mat-typography-level(24px, 32px, 400),
+  $title:         mat-typography-level(20px, 32px, 500),
+  $subheading-2:  mat-typography-level(16px, 28px, 400),
+  $subheading-1:  mat-typography-level(15px, 24px, 400),
+  $body-2:        mat-typography-level(14px, 24px, 500),
     // Line-height must be unit-less fraction of the font-size.
-  //$input:         mat-typography-level(2.0, 2.5, 400)
+  $input:         mat-typography-level(inherit, 1.125, 400)
 );
 
 @include mat-core ($custom-typography);
