--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 /*mat-card {*/
 /*  height: 100vh;*/
 /*}*/
+
+mat-form-field mat-label {
+  font-size: 18px !important;
+}
+
+mat-form-field {
+  font-size: 18px !important;
+  /*color: blueviolet;*/
+}
+
+.mat-option-text {
+  font-size: 18px !important;
+  /*color: blueviolet;*/
+}
+
+.mat-select-value {
+  font-size: 18px !important;
+  /*color: blueviolet;*/
+}
+
+.mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label, .mat-form-field-appearance-outline.mat-form-field-can-float .mat-input-server:focus .mat-form-field-label-wrapper .mat-form-field-label {
+  transform: translateY(-1.59375em) scale(0.90);
+}
